get users posts by email, added email verification, added error component to display server errors

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Journaler",
-  "name": "Journaler",
+  "short_name": "Journalr",
+  "name": "Journalr",
   "icons": [
     {
       "src": "favicon.ico",
