--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "massive": "^4.7.1",
+    "moment": "^2.21.0",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "react": "^16.2.0",
