--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0"
   },
