--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "passport-auth0": "^0.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-toastify": "^3.4.3",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0"
