fixed errors, added static assets

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Journalr",
-  "name": "Journalr",
+  "short_name": "Jrnlr",
+  "name": "Jrnlr",
   "icons": [
     {
       "src": "favicon.ico",
