--- a/package.json
+++ b/package.json
@@ -7,20 +7,16 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
-    "draft-js": "^0.10.5",
-    "draftjs-to-html": "^0.8.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "immutable": "^3.8.2",
     "massive": "^4.7.1",
     "moment": "^2.21.0",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-draft-wysiwyg": "^1.12.11",
     "react-fontawesome": "^1.6.1",
-    "react-html-parser": "^2.0.2",
+    "react-froala-wysiwyg": "^2.8.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-s3-uploader": "^4.8.0",
